--- a/src/main/resources/static/css/page.css
+++ b/src/main/resources/static/css/page.css
@@ -1,32 +1,32 @@
 @import url('http://fonts.googleapis.com/earlyaccess/hanna.css');
 @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');
 
-a{
-    color:#000;
+a {
+    color: #000;
 }
 
-body{
+body {
     width: 100%;
-    overflow-x:scroll; 
+    overflow-x: scroll;
     white-space: nowrap;
 }
 
 
-.shadow_body{
+.shadow_body {
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.6);
+    background-color: rgba(0, 0, 0, .6);
     position: fixed;
     z-index: 20;
     display: none;
 }
 
 
-#header{
+#header {
     width: 100%;
     height: 40px;
     background-color: white;
-    color: rgba(0,0,0,0.5);
+    color: rgba(0, 0, 0, 0.5);
     line-height: 40px;
     text-align: center;
     font-weight: 700;
@@ -34,8 +34,8 @@ body{
     letter-spacing: 1px;
 }
 
-#header a{
-    color: rgba(0,0,0,0.5);
+#header a {
+    color: rgba(0, 0, 0, 0.5);
     margin-top: 5px;
     font-size: 13px;
     width: 100px;
@@ -49,11 +49,11 @@ body{
     font-family: 'nanumgothic', serif;
 }
 
-#header .header_text{
+#header .header_text {
     font-family: 'Hanna', serif;
 }
 
-#board_info .add_project_member_modal{
+#board_info .add_project_member_modal {
 
     width: 200px;
     height: 100px;
@@ -63,25 +63,25 @@ body{
     z-index: 80;
 }
 
-.modal{
+.modal {
     width: 370px;
 }
 
-.modal .modal-content .address_for_invitation{
+.modal .modal-content .address_for_invitation {
 
-    border:1px solid #cdd2d4;
+    border: 1px solid #cdd2d4;
     border-radius: 3px;
     height: 30px;
     margin-top: 10px;
     margin-left: 20px;
     padding-left: 5px;
     width: 200px;
-    color:rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     float: left;
 
 }
 
-.modal .modal-content .invite_for_project{
+.modal .modal-content .invite_for_project {
     border-radius: 3px;
     height: 30px;
     line-height: 30px;
@@ -89,13 +89,13 @@ body{
     margin-top: 10px;
     margin-left: 20px;
     width: 60px;
-    color:rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     background-color: #e2e4e6;
     cursor: pointer;
     float: left;
 }
 
-.add_project_member_header{
+.add_project_member_header {
 
     width: 90%;
     color: #8c8c8c;
@@ -107,30 +107,29 @@ body{
     border-bottom: 1px solid #d6dadc;
 }
 
-#board_info{
+#board_info {
 
     width: 100%;
     height: 40px;
-    color:rgba(0,0,0,0.5);
+    color: rgba(0, 0, 0, 0.5);
     line-height: 40px;
     font-size: 20px;
     margin: 10px 0 10px 20px;
 }
 
-#board_info .project_name{
-    color:rgba(0,0,0,0.5);
+#board_info .project_name {
+    color: rgba(0, 0, 0, 0.5);
     line-height: 40px;
     font-size: 20px;
     float: left;
 }
 
 
-
-#board_canvas{
+#board_canvas {
 
     width: 100%;
     height: 100%;
-/*  border:1px solid black;*/
+    /*  border:1px solid black;*/
     position: absolute;
     white-space: nowrap;
     margin-left: 10px;
@@ -138,7 +137,7 @@ body{
 
 }
 
-#board_canvas .list_wrapper{
+#board_canvas .list_wrapper {
 
     width: 270px;
     margin: 0 5px;
@@ -149,7 +148,7 @@ body{
     cursor: pointer;
 }
 
-#board_canvas .list_wrapper .list_content{
+#board_canvas .list_wrapper .list_content {
 
     background: #e2e4e6;
     border-radius: 3px;
@@ -164,16 +163,16 @@ body{
     white-space: nowrap;
 }
 
-.list_header{
+.list_header {
     width: 100%;
     display: table;
     padding: 10px 0 0 10px;
     /*font: 14px "Helvetica Neue",Arial,Helvetica,sans-serif;*/
-    font:Roboto;
+    font: Roboto;
     margin-bottom: 5px;
 }
 
-.list_header textarea{
+.list_header textarea {
     flex-direction: column;
     resize: none;
     cursor: auto;
@@ -189,7 +188,7 @@ body{
     line-height: 18px;
 }
 
-.list_wrapper .card_composer{
+.list_wrapper .card_composer {
 
     cursor: pointer;
     margin-bottom: 6px;
@@ -198,40 +197,41 @@ body{
     position: relative;
     z-index: 0;
     white-space: normal;
-/*    display: none;*/
+    /*    display: none;*/
 
-    }
-
-.list_wrapper .card_composer .add_card_form{
-    display: none;
-    border:none;
 }
 
-.list_wrapper .card_composer .add_card_form a{
-    color:rgba(0,0,0,.5);
+.list_wrapper .card_composer .add_card_form {
+    display: none;
+    border: none;
+}
+
+.list_wrapper .card_composer .add_card_form a {
+    color: rgba(0, 0, 0, .5);
     margin-top: 5px;
     margin-left: 9px;
 }
 
-.list_wrapper .card_composer .add_card_form a.card_cancel{
-   margin-left: 10px;
+.list_wrapper .card_composer .add_card_form a.card_cancel {
+    margin-left: 10px;
 }
 
-.list_wrapper .card_composer textarea{
+.list_wrapper .card_composer textarea {
 
     background-color: #fff;
     border-radius: 3px;
     letter-spacing: normal;
     resize: none;
-    border:none;
+    border: none;
     margin-left: 9px;
-    max-width: 248px;  
+    max-width: 248px;
     min-height: 20px;
     position: relative;
     border-bottom: 1px solid #ccc;
 
 }
-.add_card{
+
+.add_card {
 
     border-radius: 0 0 3px 3px;
     color: #8c8c8c;
@@ -243,43 +243,43 @@ body{
     padding: 8px 10px;
     position: relative;
     text-decoration: none;
-    
+
 }
 
 
-.add_list{
+.add_list {
 
-/*  background: rgba(0,0,0,.1);*/
+    /*  background: rgba(0,0,0,.1);*/
     cursor: pointer;
     width: 270px;
     border-radius: 3px;
     margin: 0 5px;
-    color: rgba(0,0,0,0.5);
+    color: rgba(0, 0, 0, 0.5);
     display: inline-block;
 }
 
-.add_list .add_list_form a{
-   color:rgba(0,0,0,.5);
+.add_list .add_list_form a {
+    color: rgba(0, 0, 0, .5);
 }
 
-.add_list .add_list_form a.cancel{
-   margin-left: 10px;
+.add_list .add_list_form a.cancel {
+    margin-left: 10px;
 }
 
-.placeholder{
+.placeholder {
     display: block;
     padding: 7px;
-    color: rgba(0,0,0,.5);
+    color: rgba(0, 0, 0, .5);
     padding: 7px;
 }
 
 
-.list_add_controls{
+.list_add_controls {
 
     display: none;
 }
 
-.add_list_form{
+.add_list_form {
     display: none;
 }
 
@@ -293,13 +293,13 @@ body{
     border-color: transparent;
     box-shadow: none;
     cursor: pointer;
-/*    margin-top: 20px;*/
+    /*    margin-top: 20px;*/
     text-decoration: none;
     padding-left: 5px;
 
 }
 
-.list_cards{
+.list_cards {
 
     overflow-y: overlay;
     margin-right: 2px;
@@ -311,8 +311,7 @@ body{
 }
 
 
-
-.list_card{
+.list_card {
     background-color: #fff;
     border-bottom: 1px solid #ccc;
     border-radius: 3px;
@@ -324,7 +323,7 @@ body{
     z-index: 0;
 }
 
-.list_card .list_card_detail{
+.list_card .list_card_detail {
 
     overflow: hidden;
     padding: 6px 6px 2px 8px;
@@ -334,7 +333,7 @@ body{
     white-space: normal;
 }
 
-.list_card_detail .list_card_title{
+.list_card_detail .list_card_title {
 
     clear: both;
     display: block;
@@ -343,16 +342,16 @@ body{
     overflow: hidden;
     text-decoration: none;
     word-wrap: break-word;
-    color:#4d4d4d;
+    color: #4d4d4d;
 
 }
 
-.list_card_detail .list_card_title a{
+.list_card_detail .list_card_title a {
 
     background-color: transparent;
 }
 
-#modalLayer{
+#modalLayer {
 
     width: 800px;
     overflow: auto;
@@ -361,74 +360,79 @@ body{
     margin: 0 auto;
     position: relative;
     background-color: #edeff0;
-    z-index:30;
-    height: auto; 
+    z-index: 30;
+    height: auto;
 }
 
-#modalLayer .close_button{
+#modalLayer .close_button {
     float: right;
-    border:none;
-    background-color: rgba(255,255,255,0);
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
     margin: 5px 5px 0 0;
     text-align: right;
 }
 
 
-#modalLayer .modal_content{
-    padding-left:1.5em;
+#modalLayer .modal_content {
+    padding-left: 1.5em;
     padding-top: 0;
-/*    border:1px solid black;*/
+    /*    border:1px solid black;*/
     width: 73%;
-    box-sizing:border-box;
+    box-sizing: border-box;
     float: left;
 }
 
-#modalLayer .modal_content .card_title_in_modal, #modalLayer .modal_content p{
-    color: rgba(0,0,0,0.6);
+#modalLayer .modal_content .card_title_in_modal, #modalLayer .modal_content p {
+    color: rgba(0, 0, 0, 0.6);
     font-size: 20px;
     font-weight: bold;
     padding-top: 0;
     margin-bottom: 10px;
 }
 
-#modalLayer .modal_content .in_list{
+.modal-body {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
+}
+
+#modalLayer .modal_content .in_list {
     /*margin-left: 2em;*/
     margin-top: 0;
     color: #8c8c8c;
 }
 
-#modalLayer .modal_content .list_name{
+#modalLayer .modal_content .list_name {
     color: #8c8c8c;
     margin-bottom: 0;
-     text-decoration: underline;
+    text-decoration: underline;
 
 }
 
-#modalLayer .modal_sidebar{
+#modalLayer .modal_sidebar {
 
     width: 27%;
     height: 100%;
-    box-sizing:border-box;
+    box-sizing: border-box;
     float: left;
     padding-left: 3%;
     z-index: 40;
 }
 
 
-#modalLayer .modal_sidebar .modal_sidebar_btn{
-    color:rgba(0,0,0,0.5);
+#modalLayer .modal_sidebar .modal_sidebar_btn {
+    color: rgba(0, 0, 0, 0.5);
     width: 170px;
     height: 40px;
     line-height: 40px;
     background-color: white;
     border-radius: 4px;
     text-align: left;
-    padding-left:20px;
+    padding-left: 20px;
     cursor: pointer;
     margin-top: 0.6em;
 }
 
-#modalLayer .modal_sidebar .modal_for_due_date{
+#modalLayer .modal_sidebar .modal_for_due_date {
 
     width: 172px;
     height: 220px;
@@ -437,11 +441,25 @@ body{
     position: absolute;
     background-color: white;
     border-radius: 3px;
-    border:1px solid #d6dadc;
+    border: 1px solid #d6dadc;
     border-bottom-color: #c4c9cc;
     display: none;
 }
-#modalLayer .modal_sidebar .modal_for_checklist{
+
+#modalLayer .modal_sidebar .modal_for_checklist {
+    width: 172px;
+    height: 160px;
+    right: 20px;
+    margin-top: 0.6em;
+    position: absolute;
+    background-color: white;
+    border-radius: 3px;
+    border: 1px solid #d6dadc;
+    border-bottom-color: #c4c9cc;
+    display: none;
+}
+
+#modalLayer .modal_sidebar .modal_for_attachment {
     width: 172px;
     height: 200px;
     right: 20px;
@@ -449,25 +467,13 @@ body{
     position: absolute;
     background-color: white;
     border-radius: 3px;
-    border:1px solid #d6dadc;
-    border-bottom-color: #c4c9cc;
-    display: none;
-}
-#modalLayer .modal_sidebar .modal_for_attachment{
-    width: 172px;
-    height: 200px;
-    right: 20px;
-    margin-top: 0.6em;
-    position: absolute;
-    background-color: white;
-    border-radius: 3px;
-    border:1px solid #d6dadc;
+    border: 1px solid #d6dadc;
     border-bottom-color: #c4c9cc;
     display: none;
 }
 
 #modalLayer .modal_sidebar .modal_for_due_date .due_date_btn_header, #modalLayer .modal_sidebar .modal_for_attachment .attachment_btn_header,
-#modalLayer .modal_sidebar .modal_for_checklist .checklist_btn_header{
+#modalLayer .modal_sidebar .modal_for_checklist .checklist_btn_header {
 
     width: 90%;
     color: #8c8c8c;
@@ -479,12 +485,12 @@ body{
     border-bottom: 1px solid #d6dadc;
 }
 
-#modalLayer .modal_sidebar .modal_for_attachment #fileUpload{
+#modalLayer .modal_sidebar .modal_for_attachment #fileUpload {
 
     display: none;
 }
 
-#modalLayer .modal_sidebar .modal_for_attachment .attach_from_computer{
+#modalLayer .modal_sidebar .modal_for_attachment .attach_from_computer {
 
     margin: 10px;
     cursor: pointer;
@@ -496,24 +502,24 @@ body{
 }
 
 
-#modalLayer .modal_sidebar .modal_for_attachment .attach_with_link{
+#modalLayer .modal_sidebar .modal_for_attachment .attach_with_link, #modalLayer .modal_sidebar .modal_for_checklist label {
     margin: 10px 0 5px 10px;
     color: #4d4d4d;
     font-weight: 700;
 
 }
 
-#modalLayer .modal_sidebar .modal_for_attachment .link_for_attachment{
-    border:1px solid #cdd2d4;
+#modalLayer .modal_sidebar .modal_for_attachment .link_for_attachment {
+    border: 1px solid #cdd2d4;
     border-radius: 3px;
     height: 30px;
     margin-left: 10px;
     padding-left: 5px;
     width: 140px;
-    color:rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
 }
 
-#modalLayer .modal_sidebar .modal_for_attachment .link_submit{
+#modalLayer .modal_sidebar .modal_for_attachment .link_submit, #modalLayer .modal_sidebar .modal_for_checklist .link_submit {
     width: 70px;
     height: 30px;
     line-height: 30px;
@@ -528,40 +534,40 @@ body{
 }
 
 
-#modalLayer .modal_sidebar .modal_for_due_date .dpicker_widget .datapicker_select_date{
-     color: #4d4d4d;
-     width: 50%;
-     height: 80px;
-     padding: 10px;
-     box-sizing:border-box;
+#modalLayer .modal_sidebar .modal_for_due_date .dpicker_widget .datapicker_select_date {
+    color: #4d4d4d;
+    width: 50%;
+    height: 80px;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
-#modalLayer .modal_sidebar .modal_for_due_date .dpicker_widget .datapicker_select_time{
-     color: #4d4d4d;
-     width: 50%;
-     height: 80px;
-     padding: 10px;
-     box-sizing:border-box;
+#modalLayer .modal_sidebar .modal_for_due_date .dpicker_widget .datapicker_select_time {
+    color: #4d4d4d;
+    width: 50%;
+    height: 80px;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
-#modalLayer .modal_sidebar .modal_for_due_date .dpicker_widget label{
+#modalLayer .modal_sidebar .modal_for_due_date .dpicker_widget label {
     font-size: 18px;
-    color:rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     font-weight: bold;
 }
 
 
-#modalLayer .modal_sidebar .modal_for_due_date .dpicker_widget input{
-    border:1px solid #cdd2d4;
+#modalLayer .modal_sidebar .modal_for_due_date .dpicker_widget input, #modalLayer .modal_sidebar .modal_for_checklist input {
+    border: 1px solid #cdd2d4;
     border-radius: 3px;
     height: 30px;
     margin-top: 10px;
     padding-left: 5px;
     width: 130px;
-    color:rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
 }
 
-#modalLayer .modal_sidebar .modal_for_members{
+#modalLayer .modal_sidebar .modal_for_members {
 
     width: 170px;
     height: 200px;
@@ -569,13 +575,13 @@ body{
     position: absolute;
     background-color: white;
     border-radius: 3px;
-    border:1px solid #d6dadc;
+    border: 1px solid #d6dadc;
     border-bottom-color: #c4c9cc;
     display: none;
-   
+
 }
 
-#modalLayer .modal_sidebar .modal_for_members .members_btn_header{
+#modalLayer .modal_sidebar .modal_for_members .members_btn_header {
     width: 90%;
     color: #8c8c8c;
     line-height: 36px;
@@ -586,33 +592,33 @@ body{
     border-bottom: 1px solid #d6dadc;
 }
 
-#modalLayer .modal_sidebar .modal_for_members .search_member{
+#modalLayer .modal_sidebar .modal_for_members .search_member {
     width: 90%;
     margin: 0 auto;
 
 }
 
 
-#modalLayer .modal_sidebar p{
+#modalLayer .modal_sidebar p {
     margin-top: 2em;
-    color: rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     width: 70%;
     font-size: 18px;
     font-weight: bold;
 }
 
 
-#modalLayer .info_about_this_card{
+#modalLayer .info_about_this_card {
     width: 100%;
     height: 30px;
     border-bottom: 1px solid #e2e4e6;
 }
 
-#modalLayer .info_about_this_card .card_mover{
+#modalLayer .info_about_this_card .card_mover {
     float: left;
 }
 
-#modalLayer .info_about_this_card .time{
+#modalLayer .info_about_this_card .time {
     float: left;
     margin-left: 10px;
     font-size: 0.8em;
@@ -620,7 +626,7 @@ body{
 
 }
 
-#modalLayer .modal_header{
+#modalLayer .modal_header {
     margin: 4px 40px 4px 38px;
     padding: 9pt 9pt 0;
     position: relative;
@@ -628,10 +634,10 @@ body{
     display: block;
 }
 
-#modalLayer .comment_frame textarea{
+#modalLayer .comment_frame textarea {
     background-color: white;
-    border:none;
-    resize:none;
+    border: none;
+    resize: none;
     height: 75px;
     overflow: hidden;
     min-height: 75px;
@@ -642,7 +648,7 @@ body{
 
 }
 
-#modalLayer .comment_send{
+#modalLayer .comment_send {
 
     width: 85px;
     height: 40px;
@@ -653,11 +659,11 @@ body{
     margin-top: 15px;
     color: #8c8c8c;
     cursor: pointer;
- /*   padding: 7px 20px;*/
+    /*   padding: 7px 20px;*/
 }
 
 
-#modalLayer .comment{
+#modalLayer .comment {
 
     width: 100%;
     border-bottom: 1px solid #e2e4e6;
@@ -665,7 +671,7 @@ body{
     margin-top: 15px;
 }
 
-#modalLayer .comment .commenter{
+#modalLayer .comment .commenter {
 
     height: 14px;
     color: #4d4d4d;
@@ -675,7 +681,7 @@ body{
 
 }
 
-#modalLayer .comment .comment_contents{
+#modalLayer .comment .comment_contents {
 
     padding: 9px 11px;
     display: block;
@@ -685,18 +691,18 @@ body{
     background-color: white;
     border-radius: 5px;
     margin-bottom: 12px;
-    word-wrap:break-word;
+    word-wrap: break-word;
 
 }
 
-#modalLayer .comment .comment_date{
+#modalLayer .comment .comment_date {
 
     color: #8c8c8c;
     font-size: 14px;
     float: left;
 }
 
-#modalLayer .comment .comment_reply{
+#modalLayer .comment .comment_reply {
     color: #8c8c8c;
     font-size: 14px;
     float: left;
@@ -706,10 +712,29 @@ body{
 
 }
 
-#sortable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
-#sortable li { margin: 0 5px 5px 5px; padding: 5px; font-size: 1.2em; height: 1.5em; }
-html>body #sortable li { height: 1.5em; line-height: 1.2em; }
-.ui-state-highlight { height: 1.5em; line-height: 1.2em; }
+#sortable {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 60%;
+}
+
+#sortable li {
+    margin: 0 5px 5px 5px;
+    padding: 5px;
+    font-size: 1.2em;
+    height: 1.5em;
+}
+
+html > body #sortable li {
+    height: 1.5em;
+    line-height: 1.2em;
+}
+
+.ui-state-highlight {
+    height: 1.5em;
+    line-height: 1.2em;
+}
 
 
 
