--- a/src/main/resources/static/css/projectMain.css
+++ b/src/main/resources/static/css/projectMain.css
@@ -2,66 +2,66 @@
 @import url('http://fonts.googleapis.com/earlyaccess/jejuhallasan.css');
 @import url('http://fonts.googleapis.com/earlyaccess/hanna.css');
 
-#header{
-	width: 100%;
-	height: 40px;
-	background-color: white;
-	color: rgba(0,0,0,0.5);
-	line-height: 40px;
-	text-align: center;
-	font-weight: 700;
-	font-family: 'Hanna', serif;
-	font-size: 20px;
-	letter-spacing: 1px;
+#header {
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    color: rgba(0, 0, 0, 0.5);
+    line-height: 40px;
+    text-align: center;
+    font-weight: 700;
+    font-family: 'Hanna', serif;
+    font-size: 20px;
+    letter-spacing: 1px;
 }
 
-#my_board{
+#my_board {
 
-	width: 100%;
-	height: 40px;
-	line-height: 40px;
-	color:#4d4d4d;
-	margin: 100px 0 0 30px;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    color: #4d4d4d;
+    margin: 100px 0 0 30px;
 }
 
-#boards_list{
+#boards_list {
 
-	width: 100%;
-	height: 100%;
-/*	border:1px solid black;*/
-	margin: 20px 0 20px 0px;
+    width: 100%;
+    height: 100%;
+    /*	border:1px solid black;*/
+    margin: 20px 0 20px 0px;
 }
 
-#boards_list .board{
+#boards_list .board {
 
-	width: 275px;
-	height: 90px;
-/*	color:white;*/
-	color: rgba(0,0,0,0.4);
-	float:left;
-	list-style: none;
-	line-height: 90px;
-	background-color: white;
-	margin: 0 0 30px 30px;
-/*	border-radius: 5px;*/
+    width: 275px;
+    height: 90px;
+    /*	color:white;*/
+    color: rgba(0, 0, 0, 0.4);
+    float: left;
+    list-style: none;
+    line-height: 90px;
+    background-color: white;
+    margin: 0 0 30px 30px;
+    /*	border-radius: 5px;*/
 
 }
 
-#boards_list #create_board{
+#boards_list #create_board {
 
-	width: 275px;
-	height: 90px;
-	float:left;
-	list-style: none;
-	line-height: 90px;
-	text-align: center;
-	margin-left: 30px;
-	background-color: #eceff1;
-	color: rgba(0,0,0,0.4);
+    width: 275px;
+    height: 90px;
+    float: left;
+    list-style: none;
+    line-height: 90px;
+    text-align: center;
+    margin-left: 30px;
+    background-color: #eceff1;
+    color: rgba(0, 0, 0, 0.4);
 }
 
 
-.add_project{
+.add_project {
 
     cursor: pointer;
     width: 270px;
@@ -70,35 +70,35 @@
     display: inline-block;
 }
 
-.add_project .add_project_form a{
-   color:rgba(0,0,0,.5);
+.add_project .add_project_form a {
+    color: rgba(0, 0, 0, .5);
 }
 
-.add_project .add_project_form a.cancel{
-   margin-left: 10px;
+.add_project .add_project_form a.cancel {
+    margin-left: 10px;
 }
 
-.placeholder{
+.placeholder {
     display: block;
     padding: 7px;
-    color: rgba(0,0,0,.5);
+    color: rgba(0, 0, 0, .5);
     padding: 7px;
 }
 
 
-.list_add_controls{
+.list_add_controls {
 
     display: none;
 }
 
-.add_project_form{
+.add_project_form {
     display: none;
 }
 
-.add_project .add_project_btn{
+.add_project .add_project_btn {
 
-	margin-left: 15px;
-	margin-top: 15px;
+    margin-left: 15px;
+    margin-top: 15px;
 }
 
 
@@ -111,7 +111,7 @@
     border-color: transparent;
     box-shadow: none;
     cursor: pointer;
-/*    margin-top: 20px;*/
+    /*    margin-top: 20px;*/
     text-decoration: none;
     padding-left: 5px;
 
