--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="webjars/bootstrap/4.4.1-1/css/bootstrap.min.css" rel="stylesheet">
+<head th:fragment="header">
+    <meta charset="utf-8">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" th:href="@{/css/materialize.min.css}" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" th:href="@{/css/page.css}" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" th:href="@{/css/todo.css}" media="screen,projection"/>
+    <link href="/webjars/bootstrap/4.4.1-1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 </head>
 <body>
 
 <footer th:fragment="footer">
-<script src="webjars/bootstrap/4.4.1-1/js/bootstrap.min.js"></script>
-<script src="webjars/jquery/3.5.0/jquery.min.js"></script>
+    <script src="/webjars/jquery/3.5.0/jquery.min.js"></script>
+    <script src="/webjars/jquery-ui/1.12.0/jquery-ui.min.js"></script>
+    <script type="text/javascript" th:src="@{/layer/layer.js}"></script>
+    <script th:src="@{/lib/jquery.fileupload.js}"></script>
+    <script th:src="@{/lib/handlebars-v4.0.5.js}"></script>
+    <script type="text/javascript" th:src="@{/lib/materialize.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/page.js}"></script>
+    <script type="text/javascript" th:src="@{/js/BuildTable.js}"></script>
+    <script type="text/javascript" th:src="@{/js/AddCheckBoxListener.js}"></script>
+    <script type="text/javascript" th:src="@{/js/modal.js}"></script>
 </footer>
 </body>
 </html>
