--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -19,6 +19,8 @@
     <script th:src="@{/lib/handlebars-v4.0.5.js}"></script>
     <script type="text/javascript" th:src="@{/lib/materialize.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/page.js}"></script>
+    <script type="text/javascript" th:src="@{/js/moment.js}"></script>
+    <script type="text/javascript" th:src="@{/js/HandlebarsHelpers.js}"></script>
     <script type="text/javascript" th:src="@{/js/BuildTable.js}"></script>
     <script type="text/javascript" th:src="@{/js/AddCheckBoxListener.js}"></script>
     <script type="text/javascript" th:src="@{/js/modal.js}"></script>
