add attachment page modified

--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -49,7 +49,7 @@
 <!--            {{/Checklists}}-->
         </div>
         <p>Attachment</p>
-        <div id="attachments">
+        <div id="attachments" class="js-attachment-list ui-sortable">
 
         </div>
     </div>
