--- a/src/main/resources/static/css/page.css
+++ b/src/main/resources/static/css/page.css
@@ -736,16 +736,49 @@ html > body #sortable li {
     line-height: 1.2em;
 }
 
-.thumbnail {
-    display: block;
-    overflow: hidden;
-    height: 200px;
-    width: 200px;
-}
+/*.attachment-thumbnail {*/
+/*    border-radius: 3px;*/
+/*    min-height: 80px;*/
+/*    margin: 0 0 8px;*/
+/*    overflow: hidden;*/
+/*    position: relative;*/
+/*}*/
 
-.thumbnail img {
-    display: block;
-    height: 100%;
-}
+/*.attachment-thumbnail-preview {*/
+/*    background-color: rgba(9,30,66,.04);*/
+/*    background-position: 50%;*/
+/*    background-size: contain;*/
+/*    background-repeat: no-repeat;*/
+/*    border-radius: 3px;*/
+/*    height: 80px;*/
+/*    margin-top: -40px;*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    left: 0;*/
+/*    text-align: center;*/
+/*    text-decoration: none;*/
+/*    z-index: 1;*/
+/*    width: 112px;*/
+/*}*/
+/*.attachment-thumbnail-details {*/
+/*    box-sizing: border-box;*/
+/*    cursor: pointer;*/
+/*    padding: 8px 8px 8px 128px;*/
+/*    min-height: 80px;*/
+/*    margin: 0;*/
+/*    z-index: 0;*/
+/*}*/
+/*.attachment-thumbnail-details .attachment-thumbnail-name {*/
+/*    font-weight: 700;*/
+/*    word-wrap: break-word;*/
+/*}*/
+/*.attachment-thumbnail-details-title-options {*/
+/*    margin-bottom: 8px;*/
+/*}*/
+
+/*.attachment-thumbnail-details-title-options-item {*/
+/*    font-size: 14px;*/
+/*    margin-bottom: 8px;*/
+/*}*/
 
 
