--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -2,11 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Material Admin</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="robots" content="all,follow">
+  <title>Register</title>
   <!-- Bootstrap CSS-->
   <link rel="stylesheet" th:href="@{/bootstrap4/css/bootstrap.min.css}"
         href="../../static/bootstrap4/css/bootstrap.min.css">
@@ -21,6 +17,7 @@
   <link rel="stylesheet"
         th:href="@{/css/style.default.css}"
         href="../../static/css/style.default.css" id="theme-stylesheet">
+  
 </head>
 <body>
 <!--//导航栏-->
@@ -31,15 +28,15 @@
 <div class="page login-page">
   <div class="container d-flex align-items-center">
     <div class="form-holder has-shadow">
-      <div class="row">
+      <div class="row" >
         <!-- Logo & Information Panel-->
         <div class="col-lg-6">
-          <div class="info d-flex align-items-center">
+          <div class="info d-flex align-items-center" style="opacity:0.8 ;">
             <div class="content">
               <div class="logo">
                 <h1>欢迎注册</h1>
               </div>
-              <p>金屹电源远程管理系统</p>
+              <p>云笔记plus管理系统</p>
             </div>
           </div>
         </div>
@@ -48,29 +45,27 @@
         <div class="col-lg-6 bg-white">
           <div class="form d-flex align-items-center">
             <div class="content">
-              <form method="post" action="/notebook/register">
+              <form method="post" th:action="@{/register}" id="registerForm">
                 <div class="form-group">
-                  <input id="register-username" class="input-material" type="text" name="username" placeholder="请输入用户名/姓名" required minlength="6">
-                  <div class="invalid-feedback">
-                    用户名必须在6~10位之间
-                  </div>
+                  <input id="username" class="input-material" type="text" name="username" placeholder="请输入用户名/姓名">
+
                 </div>
                 <div class="form-group">
-                  <input id="register-password" class="input-material" type="password" name="password" placeholder="请输入密码" required minlength="6"  >
-                  <div class="invalid-feedback">
-                    密码必须在6~10位之间
-                  </div>
+                  <input id="email" class="input-material" type="text" name="email" placeholder="请输入邮箱" >
+
                 </div>
                 <div class="form-group">
-                  <input id="register-passwords" class="input-material" type="password" name="registerPasswords" placeholder="确认密码" required minlength="6"  >
-                  <div class="invalid-feedback">
-                    两次密码必须相同 且在6~10位之间
-                  </div>
+                  <input id="password" class="input-material" type="password" name="password" placeholder="请输入密码">
+
                 </div>
                 <div class="form-group">
-                  <button id="regbtn" type="submit" name="registerSubmit" class="btn btn-primary">注册</button>
+                  <input id="confirmPassword" class="input-material" type="password" name="confirmPassword" placeholder="确认密码">
+
                 </div>
-                <small>已有账号?</small><a  href="/notebook/login" class="signup">&nbsp;登录</a>
+                <div class="form-group">
+                  <button type="submit" class="btn btn-primary">注册</button>
+                </div>
+                <small>已有账号?</small><a th:href="@{/login}" class="signup">&nbsp;登录</a>
               </form>
             </div>
           </div>
@@ -80,78 +75,123 @@
   </div>
 </div>
 
-<!--底部-->
-<footer th:replace="fragments/layout2::footer">
-
-</footer>
-
 <!-- JavaScript files-->
-<script src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
-<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/bootstrap.min.js"></script>
-<script>
-  $(function(){
-    /*错误class  form-control is-invalid
-    正确class  form-control is-valid*/
-    var flagName=false;
-    var flagPas=false;
-    var flagPass=false;
-    /*验证用户名*/
-    var name,passWord,passWords;
-    $("#register-username").change(function(){
-      name=$("#register-username").val();
-      if(name.length<2||name.length>10){
-        $("#register-username").removeClass("form-control is-valid")
-        $("#register-username").addClass("form-control is-invalid");
-        flagName=false;
-      }else{
-        $("#register-username").removeClass("form-control is-invalid")
-        $("#register-username").addClass("form-control is-valid");
-        flagName=true;
-      }
-    })
-    /*验证密码*/
-    $("#register-password").change(function(){
-      passWord=$("#register-password").val();
-      if(passWord.length<6||passWord.length>18){
-        $("#register-password").removeClass("form-control is-valid")
-        $("#register-password").addClass("form-control is-invalid");
-        flagPas=false;
-      }else{
-        $("#register-password").removeClass("form-control is-invalid")
-        $("#register-password").addClass("form-control is-valid");
-        flagPas=true;
-      }
-    })
-    /*验证确认密码*/
-    $("#register-passwords").change(function(){
-      passWords=$("#register-passwords").val();
-      if((passWord!=passWords)||(passWords.length<6||passWords.length>18)){
-        $("#register-passwords").removeClass("form-control is-valid")
-        $("#register-passwords").addClass("form-control is-invalid");
-        flagPass=false;
-      }else{
-        $("#register-passwords").removeClass("form-control is-invalid")
-        $("#register-passwords").addClass("form-control is-valid");
-        flagPass=true;
-      }
-    })
-    $("#regbtn").click(function(){
-      if(flagName&&flagPas&&flagPass){
-        localStorage.setItem("name",name);
-        localStorage.setItem("passWord",passWord);
-        location="login.html"
-      }else{
-        if(!flagName){
-          $("#register-username").addClass("form-control is-invalid");
+<!-- Using the jquery CDN -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Using the jquery validate plugin -->
+<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<script type="text/javascript" th:src="@{/layer/layer.js}"></script>
+<script type="text/javascript">
+  $(document).ready(function () {
+
+    //表单验证
+    $("#registerForm").validate({
+      rules: {
+        username: {
+          required: true,
+          minlength: 6,
+          maxlength: 20,
+          remote: {
+            url: "/user/check/username",
+            type: "post",
+            data: {
+              username: function () {
+                return $("#username").val();
+              }
+            }
+          }
+        },
+        email: {
+          required: true,
+          email: true,
+          regex: /^\b[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}\b$/i,
+          remote: {
+            //邮箱存在报错
+            url: "/user/check/emailIsExists",
+            type: "post",
+            data: {
+              username: function () {
+                return $("#email").val();
+              }
+            }
+          }
+        },
+        password: {
+          required: true,
+          minlength: 6,
+          maxlength: 20
+        },
+        confirmPassword: {
+          required: true,
+          equalTo: "#password",
+          minlength: 6,
+          maxlength: 20
         }
-        if(!flagPas){
-          $("#register-password").addClass("form-control is-invalid");
+      },
+
+      messages: {
+        username: {
+          required: "required",
+          minlength: "用户名长度至少6位",
+          maxlength: "用户名长度至多20位",
+          remote: "用户名已被占用"
+        },
+        email:{
+          required: "required",
+          regex:"邮箱格式错误",
+          remote:"邮箱已被注册"
+        },
+        password: {
+          required: "required",
+          maxlength: "密码长度至多20位",
+          minlength: "密码长度至少6位"
+        },
+        confirmPassword: {
+          required: "required",
+          equalTo: "确认密码应与新密码相同"
         }
-        if(!flagPass){
-          $("#register-passwords").addClass("form-control is-invalid");
-        }
+      },
+      wrapper: 'span',
+      submitHandler: function(form) {
+        $.ajax({
+          url: form.action,
+          type: form.method,
+          data: $(form).serialize(),
+          success: function(response) {
+            if(response == 1){
+              layer.msg("注册成功", {time: 2000, icon: 1, shift: 6}, function () {
+                //    注册成功后跳转到登录页面
+                window.location.href  = "/login";
+              })
+            }else {
+              layer.msg("未知错误", {time: 2000, icon: 5, shift: 6}, function () {
+              })
+            }
+          }
+        });
       }
-    })
+    });
+
+    $.validator.addMethod(
+            /* The value you can use inside the email object in the validator. */
+            "regex",
+
+            /* The function that tests a given string against a given regEx. */
+            function(value, element, regexp)  {
+              /* Check if the value is truthy (avoid null.constructor) & if it's not a RegEx. (Edited: regex --> regexp)*/
+
+              if (regexp && regexp.constructor != RegExp) {
+                /* Create a new regular expression using the regex argument. */
+                regexp = new RegExp(regexp);
+              }
+
+              /* Check whether the argument is global and, if so set its last index to 0. */
+              else if (regexp.global) regexp.lastIndex = 0;
+
+              /* Return whether the element is optional or the result of the validation. */
+              return this.optional(element) || regexp.test(value);
+            }
+    );
   })
 </script>
 </body>
