--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -11,7 +11,7 @@
 </header>
 
 <div id="board_info">
-    <div class="project_name">[[${board.title}]]</div>
+    <div class="project_name"><input type="text" name="title" th:value="${board.title}" th:id="'board'+${board.id}"></div>
 </div>
 
 <div id="board_canvas" class="list_sortable">
@@ -19,7 +19,7 @@
     <div class="list_wrapper" th:each="deck:${board.decks}">
         <div class="list_content z-depth-1">
             <div class="list_header">
-                <button type="button" class="close_button">X</button>
+                <span>x</span>
                 <input type="hidden" name="id" th:value="${deck.value.id}">
                 <input type="hidden" name="boardId" th:value="${board.id}">
                 <textarea class="list_header_name" placeholder="Input Deck Name"
@@ -29,8 +29,9 @@
             <div class="list_cards">
                 <div class='list_card' th:each="cardMap:${deck.value.cards}">
                     <div class='list_card_detail'>
+                        <span>x</span>
                         <a class='list_card_title modal-trigger modalLink' dir='auto'
-                           th:attr="cardId=${cardMap.key},userId=${user.id}" href='#modalLayer'>[[${cardMap.value.title}]]</a>
+                           th:id="'card'+${cardMap.key}" href='#modalLayer'>[[${cardMap.value.title}]]</a>
                     </div>
                 </div>
             </div>
